--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -1463,6 +1463,8 @@ body {
 	z-index: 1000000;
 	background-color: black;
 	border: none;
+	margin-top: -1px;
+	margin-left: -1px;
 }
 
 .table-add-col-row-marker {
