CODA(backstage): disable save button when document is unchanged
Signed-off-by: codewithvk <vivek.javiya@collabora.com>
Change-Id: I1b73a889819e2ae0bbdbd751716aa80af40383ff

--- a/browser/css/backstage.css
+++ b/browser/css/backstage.css
@@ -157,6 +157,16 @@
 	box-shadow: inset 3px 0 0 var(--color-primary);
 }
 
+.backstage-sidebar-item.disabled {
+	opacity: 0.5;
+	cursor: not-allowed;
+	pointer-events: none;
+}
+
+.backstage-sidebar-item.disabled:hover {
+	background-color: transparent;
+}
+
 .backstage-sidebar-item img {
 	display: none;
 }
