--- a/macos/coda/coda/Base.lproj/Main.storyboard
+++ b/macos/coda/coda/Base.lproj/Main.storyboard
@@ -11,11 +11,11 @@
                 <application id="hnw-xV-0zn" sceneMemberID="viewController">
                     <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                         <items>
-                            <menuItem title="coda" id="1Xt-HY-uBw">
+                            <menuItem title="ProductName" id="1Xt-HY-uBw">
                                 <modifierMask key="keyEquivalentModifierMask"/>
-                                <menu key="submenu" title="coda" systemMenu="apple" id="uQy-DD-JDr">
+                                <menu key="submenu" title="ProductName" systemMenu="apple" id="uQy-DD-JDr">
                                     <items>
-                                        <menuItem title="About coda" id="5kV-Vb-QxS">
+                                        <menuItem title="About ProductName" id="5kV-Vb-QxS">
                                             <modifierMask key="keyEquivalentModifierMask"/>
                                             <connections>
                                                 <action selector="orderFrontStandardAboutPanel:" target="Ady-hI-5gd" id="Exp-CZ-Vem"/>
@@ -29,7 +29,7 @@
                                             <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                                        <menuItem title="Hide coda" keyEquivalent="h" id="Olw-nP-bQN">
+                                        <menuItem title="Hide ProductName" keyEquivalent="h" id="Olw-nP-bQN">
                                             <connections>
                                                 <action selector="hide:" target="Ady-hI-5gd" id="PnN-Uc-m68"/>
                                             </connections>
@@ -47,7 +47,7 @@
                                             </connections>
                                         </menuItem>
                                         <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                                        <menuItem title="Quit coda" keyEquivalent="q" id="4sb-4s-VLi">
+                                        <menuItem title="Quit ProductName" keyEquivalent="q" id="4sb-4s-VLi">
                                             <connections>
                                                 <action selector="terminate:" target="Ady-hI-5gd" id="Te7-pn-YzF"/>
                                             </connections>
@@ -660,7 +660,7 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                                     <items>
-                                        <menuItem title="coda Help" hidden="YES" keyEquivalent="?" id="FKE-Sm-Kum">
+                                        <menuItem title="ProductName Help" hidden="YES" keyEquivalent="?" id="FKE-Sm-Kum">
                                             <connections>
                                                 <action selector="showHelp:" target="Ady-hI-5gd" id="y7X-2Q-9no"/>
                                             </connections>
