CODA(backstage) : fix dark mode issue
Signed-off-by: codewithvk <vivek.javiya@collabora.com>
Change-Id: I5780675c7c8fb24cf84bca7ebc2e2f5066bbea92

--- a/browser/css/color-palette-dark.css
+++ b/browser/css/color-palette-dark.css
@@ -76,6 +76,9 @@
 	--color-quickfind-border: #444;
 	--scrollbar-color: #c0bfbc transparent;
 	--color-background-hover: #363636;
+
+	--color-backstage-background: #1E1E1E;
+	--color-backstage-background-dark: #121212;
 }
 
 [data-bg-theme='dark'] {
